[package]
name = "lasr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
secp256k1 = { version = "0.28.0", features = [ "serde", "recovery" ] }
ethereum-types = "0.14.1"
web3 = "0.19.0"
tokio = { version = "1.34.0", features = ["full"] }
rustc-hex = "2.1.0"
futures = "0.3.29"
async-trait = "0.1.74"
jsonrpsee = { version = "0.16.2", features = [
    "macros",
    "client-core",
    "server-core",
    "server",
    "http-client",
    "ws-client"
] }
serde = { version = "1.0.192", features = [ "derive" ] } 
serde_json = "1.0.108"
bincode = "1.3.3"
derive_builder = "0.12.0"
sha3 = "0.10.8"
hex = "0.4.3"
eigenda_client = { path = "../da/eigenda_client/" }
ractor = { version = "0.9.3", features = [ "async-std", "cluster" ]}
ractor_cluster_derive = "0.9.3"
ractor_cluster = "0.9.3"
thiserror = "1.0.50"
clap = "4.4.11"
rayon = "1.8.0"
eo_listener = { path = "../eo_listener" }
log = "0.4.20"
simple_logger = "4.3.0"

[dev-dependencies]
simple_logger = "4.3.0"

