[package]
name = "lasr_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lasr-cli"
path = "src/main.rs"

[dependencies]
lasr_node = { path = "../lasr_node" }
lasr_types = { path = "../lasr_types" }
secp256k1 = { version = "0.28.0", features = [ "serde", "recovery", "global-context", "rand", "hashes" ] }
jsonrpsee = { version = "0.16.2", features = [
    "macros",
    "client-core",
    "server-core",
    "server",
    "http-client",
    "ws-client"
] }
ethereum-types = "0.14.1"
bip39 = "2.0.0"
clap = { version = "4.4.11", features=[ "derive", "cargo", "env", "wrap_help", "string" ] }
hex = "0.4.3"
uint = "0.9.5"
prost = "0.9"
base64 = "0.13"
tokio = { version = "1.34.0", features = ["full"] }
ritelinked = "0.3.2"
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
derive_builder = "0.12.0"
tonic = "0.10.2"
log = "0.4.20"
