[package]
name = "lasr_da"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.6"

[dependencies]
prost = "0.9"
base64 = "0.13"
tokio = { version = "1.34.0", features = ["full"] }
ritelinked = "0.3.2"
serde = { version = "1.0.192", features=["derive"] }
serde_json = "1.0.108"
derive_builder = "0.12.0"
tonic = "0.10.2"
log = "0.4.20"
