[package]
name = "lasr_cli"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
remote = []

[[bin]]
name = "lasr_cli"
path = "src/cli.rs"

[dependencies]
async-recursion = "1.0.5"
bip39 = "2.0.0"
clap = { version = "4.4.11", features = [
  "derive",
  "cargo",
  "env",
  "wrap_help",
  "string",
] }
ethereum-types = "0.14.1"
hex = "0.4.3"
jsonrpsee = { version = "0.22.5", features = [
  "macros",
  "client-core",
  "server-core",
  "server",
  "http-client",
  "ws-client",
] }
lasr_compute = { path = "../compute" }
lasr_rpc = { path = "../rpc" }
lasr_types = { path = "../types" }
lasr_wallet = { path = "../wallet" }
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
uint = "0.9.5"
walkdir = "2.4.0"
web3_pkg = { git = "https://github.com/versatus/versatus.git" }
