[package]
name = "lasr_clients"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["remote"]
local = []
remote = []

[dependencies]
secp256k1 = { version = "0.28.0", features = [ "serde", "recovery", "global-context", "rand", "hashes" ] }
ethereum-types = "0.14.1"
web3 = { version = "0.19.0" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
rustc-hex = "2.1.0"
futures = "0.3.29"
async-trait = "0.1.74"
serde = { version = "1.0.192", features = [ "derive" ] } 
serde_json = "1.0.108"
sha3 = "0.10.8"
hex = "0.4.3"
eigenda_client = { git = "https://github.com/versatus/eigenda_client" }
ractor = { version = "0.9.3", features = [ "async-std", "cluster" ]}
thiserror = "1.0.50"
log = "0.4.20"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenv = "0.15.0"
lasr_types = { path = "../types" }
lasr_messages = { path = "../messages" }
lasr_actors = { path = "../actors" }
