[package]
name = "lasr_messages"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3", features = ["v4", "serde"] }
web3 = { version = "0.19.0" }
tokio = { version = "1.34.0", features = ["full"] }
ractor = { version = "0.9.3", features = ["async-std", "cluster"] }
ractor_cluster_derive = "0.9.3"
ractor_cluster = "0.9.3"
lasr_types = { path = "../types" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
derive_builder = "0.12.0"
ethereum-types = "0.14.1"
thiserror = "1.0.50"
eo_listener = { git = "https://github.com/versatus/eo_listener" }
eigenda_client = { git = "https://github.com/versatus/eigenda_client" }
