[package]
name = "lasr_messages"
publish = false
version = "0.9.0"
edition = "2021"

[features]
default = []
mock_storage = []

[dependencies]
derive_builder = "0.12.0"
eigenda_client = { git = "https://github.com/versatus/eigenda_client" }
eo_listener = { path = "../eo_listener" }
ethereum-types = "0.14.1"
lasr_types = { path = "../types" }
ractor = { version = "0.9.3", features = ["async-std", "cluster"] }
ractor_cluster = "0.9.3"
ractor_cluster_derive = "0.9.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tikv-client = "0.3.0"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
web3 = { version = "0.19.0" }
