[package]
name = "lasr_node"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["local"]
local = []
remote = []

[[bin]]
name = "lasr_node"
path = "src/main.rs"

[dependencies]
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
web3 = { version = "0.19.0" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-rayon = "2.1.0"
num_cpus = "1.16.0"
jsonrpsee = { version = "0.16.2", features = [
  "macros",
  "client-core",
  "server-core",
  "server",
  "http-client",
  "ws-client",
] }
eigenda_client = { git = "https://github.com/versatus/eigenda_client" }
ractor = { version = "0.9.3", features = ["async-std", "cluster"] }
eo_listener = { git = "https://github.com/versatus/eo_listener" }
log = "0.4.20"
futures = "0.3.29"
simple_logger = "4.3.0"
dotenv = "0.15.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
web3_pkg = { git = "https://github.com/versatus/versatus.git" }
lasr_actors = { path = "../actors", features = ["local"] }
lasr_compute = { path = "../compute", features = ["local"] }
lasr_types = { path = "../types" }
lasr_messages = { path = "../messages" }
lasr_clients = { path = "../clients", features = ["local"] }
lasr_rpc = { path = "../rpc" }

[dev-dependencies]
simple_logger = "4.3.0"
