[package]
name = "lasr_node"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["local"]
local = []
remote = []
mock_storage = []

[[bin]]
name = "lasr_node"
path = "src/main.rs"

[[example]]
name = "tikv_example"
path = "examples/tikv_account_example.rs"

[dependencies]
bincode = "1.3.3"
dotenv = "0.15.0"
eigenda_client = { git = "https://github.com/versatus/eigenda_client" }
eo_listener = { path = "../eo_listener" }
futures = "0.3.29"
jsonrpsee = { version = "0.22.5", features = [
  "macros",
  "client-core",
  "server-core",
  "server",
  "http-client",
  "ws-client",
] }
lasr_actors = { path = "../actors", features = ["local"] }
lasr_compute = { path = "../compute", features = ["local"] }
lasr_messages = { path = "../messages" }
lasr_rpc = { path = "../rpc" }
lasr_types = { path = "../types" }
lazy_static = "1.4.0"
log = "0.4.20"
num_cpus = "1.16.0"
ractor = { version = "0.9.3", features = ["async-std", "cluster"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.3.0"
tikv-client = "0.3.0"
tokio = { version = "1.34.0", features = ["full"] }
tokio-rayon = "2.1.0"
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
web3 = { version = "0.19.0" }
web3_pkg = { git = "https://github.com/versatus/versatus.git" }

[dev-dependencies]
simple_logger = "4.3.0"
