[package]
name = "lasr_types"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
secp256k1 = { version = "0.28.0", features = [ "serde", "recovery", "global-context", "rand", "hashes" ] }
ethereum-types = "0.14.1"
web3-signature = "0.4.0"
ethers-core = "2.0.13"
serde = { version = "1.0.192", features = [ "derive" ] } 
serde_json = { version = "1.0.108", features = [ "preserve_order" ]}
bincode = "1.3.3"
derive_builder = "0.12.0"
sha3 = "0.10.8"
hex = "0.4.3"
thiserror = "1.0.50"
log = "0.4.20"
typetag = "0.2.14"
uint = "0.9.5"
schemars = "0.8.16"
