[package]
name = "lasr_types"
version = "0.9.0"
edition = "2021"
authors = ["Versatus Labs <info@versatus.io>"]
description = "A crate to assist in development of programs in Rust for the LASR network"
readme = "README.md"
homepage = "https://versatus.io"
repository = "https://github.com/versatus/lasr/tree/main/crates/types"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = "1.3.3"
derive_builder = "0.12.0"
ethereum-types = "0.14.1"
ethers-core = "2.0.13"
hex = "0.4.3"
log = "0.4.20"
schemars = "0.8.16"
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
sha3 = "0.10.8"
thiserror = "1.0.50"
tikv-client = "0.3.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
typetag = "0.2.14"
uint = "0.9.5"
