[package]
name = "lasr_wallet"
version = "0.9.0"
edition = "2021"

[dependencies]
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
ethereum-types = "0.14.1"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"
derive_builder = "0.12.0"
sha3 = "0.10.8"
hex = "0.4.3"
log = "0.4.20"
bip39 = "2.0.0"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
lasr_types = { path = "../types" }
lasr_rpc = { path = "../rpc" }
tracing = "0.1.40"
