[package]
name = "lasr_wallet"
version = "0.9.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
bip39 = "2.0.0"
derive_builder = "0.12.0"
ethereum-types = "0.14.1"
hex = "0.4.3"
lasr_rpc = { path = "../rpc" }
lasr_types = { path = "../types" }
log = "0.4.20"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
secp256k1 = { version = "0.28.0", features = [
  "serde",
  "recovery",
  "global-context",
  "rand",
  "hashes",
] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha3 = "0.10.8"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
